0.51 - fixed minor perl DBI driver documentation issue
	added support for oracle 12c
	added support for db2 10.1 and 10.5
	updated docs for oracle 12c, db2 10.1 and 10.5 and sybase 15.7
	modernized database installation docs a little
	fixed db2/sybase detection to take the system architecture into
		account when searching for libs

0.50 - fixed sqlrserver-config script to return data for libsqlrserver
		rather than libsqlrconnection
	added test for SQLROWSETSIZE for odbc that doesn't define it
	updated postgresql drop-in library enough to work with psycopg2-2.4
		with various caveats and tweaks
	fixed NULL dereference in custom_nw logger
	added support for dbversion, show tables/databases and describe for
		SQL Server via freetds
	fixed a subtle bug that could cause the wrong triggers to be run
	fixed a reference-after-free in
		sqltranslations::removeReplacementTable
	fixed an uninitialized variable (sqltr) in sqlrcontroller class
	updated the freetds connection to support multiple cursors correctly
	added config parameters for reformatting dates in the result set
	added various query translations for mssqlserver
	added an mssqlserver error map for the mysql drop-in library
	fixed a memory leak in the freetds version-checking code
	added new search paths and default prefix for syllable
	added support for null-terminated result bind lists to the mysql
		drop-in library so apps can optionally bind fewer columns than
		come back in the result set
	added configure tests for php-config-<version>

0.49 - fixed various issues that came up when cross-compiling
	fixed make uninstall to remove a few things that it missed
	fixed -pthread annoyance
	added -Werror to default build for most components
	fixed various issues revealed by -Werror
	added password encryption framework
	added rot,md5 and crypt password encryption plugins
	moved modules to libexec and removed the libsqlrelay_ prefix
	moved modules out of the connection directory and into their own