@@ -99,3 +99,4 @@ Fixes/Patches incorporated from:
 	Benno Lange
 	Georgiy Kirichenko
 	Chae Young-ku
+	Ville Silventoinen
