@@ -467,7 +467,6 @@ FW_CHECK_LD_RPATH
 FW_CHECK_PS
 
 FW_CHECK_PIPE
-FW_CHECK_WNOLONGDOUBLE
 FW_CHECK_WALL
 FW_CHECK_WERROR
 FW_CHECK_DEBUG
